// -----------------------------------------------------------------------------
UCDetector 2.0.0 from 2016-04-15 - eclipse >=3.5:

New features:
 - Added dtd for xml reports
 - Better debug log output for ignored elements
 - Improved tooltips for UCDetector preferences
 - Improved messages, labels
 - Added negative ignore filter

 
Bugfixes:
 - #70 Error in numeric literal with underscores
 
Changes:
 - UCDetector needs java >= 1.6
 
Todo:
 - [ 3396900 ] Abstract classes' constructors can always be protected
 - [ 3400167 ] Removed warnings: Restrict method/field visibility to class visibility
 - Unused marker for code marked with javadoc @deprecated
 - #48 Keyboard binding doesn't work, and can't be changed

// -----------------------------------------------------------------------------
UCDetector 1.10.0 from 2012-04-05 - eclipse 3.4 - 3.8:
New features:
 - [ 3474895 ] Improved "// NO_UCD" quickfix
 - Added UCDetector headless installer script for linux

Bugfixes:
 - [ 3474851 ] Bad handling of quickfixes on multi-selection
 - [ 3438795 ] Ignore @Override methods
 - Fixed UCDetector headless


// -----------------------------------------------------------------------------
UCDetector 1.9.0 from 2011-10-26 - eclipse 3.4-3.7:
New features:
 - [ 3323078 ] Added: startLine, endLine, fileName to xml report
 - All preferences for headless mode are in ucdetector.options

Bugfixes:
 - UCDetector works now with "Eclipse IDE for Java Developers" (changed dependency org.eclipse.pde.core to "optional")
 - Improved backwards compatibility: UCDetector works with eclipse 3.4 (3.3)
 - [ 3396856 ] Fields in interfaces are already final

// -----------------------------------------------------------------------------
UCDetector 1.8.0 from 2011-06-15 - eclipse 3.5, 3.6, 3.7:
New features:
 - [ 3176780 ] New option: ignore "derived" files
 - Improved layout for ignore preferences
 - New build in detection mode "extreme" (no filter, show all kinds of warnings)